--- a/Scoring_MGDP/Views/DefMetricas/Create.cshtml
+++ b/Scoring_MGDP/Views/DefMetricas/Create.cshtml
@@ -1,155 +1,157 @@
-﻿@model Scoring_MGDPData.DefMetricas
+﻿@model Scoring_MGDP.ViewModel.DefMetricasViewModel
 
-@{
-    Layout = null;
-}
+<div class="modal-content">
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
-    @using (Html.BeginForm()) 
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
+
         <div class="form-horizontal">
-            <h4>DefMetricas</h4>
+            <h4 align="center">Nueva Definición de Métrica</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.id_DefMetricas, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.id_DefMetricas, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.id_DefMetricas, "", new { @class = "text-danger" })
                 </div>
-            </div>
-    
+            </div>*@
+
             <div class="form-group">
-                @Html.LabelFor(model => model.id_Proveedor, "id_Proveedor", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("id_Proveedor", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.id_Proveedor, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.ProveedorViewModel, "Proveedor", htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    @Html.DropDownListFor(m => m.IdProveedor, Model.ProveedoresList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(model => model.ProveedorViewModel, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.id_Metricas, "id_Metricas", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("id_Metricas", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.id_Metricas, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.MetricasViewModel, "Metrica", htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    @Html.DropDownListFor(m => m.IdMetrica, Model.MetricasList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(model => model.MetricasViewModel, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.FechaDesde, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.FechaDesde, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.FechaDesde, new { htmlAttributes = new { @class = "form-control" } })
+                    @*@Html.EditorFor(model => model.FechaDesde, new { @class = "form-control datepicker", placeholder = "Enter Drop-off date here..." })*@
                     @Html.ValidationMessageFor(model => model.FechaDesde, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.FechaHasta, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.FechaHasta, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.FechaHasta, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.FechaHasta, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Clave, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.Ratio, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.Ratio, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.Ratio, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Ratio, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.PesoPonderado, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.PesoPonderado, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.PesoPonderado, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PesoPonderado, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.Peso, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.Peso, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.Peso, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Peso, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.ObjCritico, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.ObjCritico, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.ObjCritico, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ObjCritico, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.ObjMinimo, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.ObjMinimo, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.ObjMinimo, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ObjMinimo, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.ObjExcelencia, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.ObjExcelencia, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
                     @Html.EditorFor(model => model.ObjExcelencia, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ObjExcelencia, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.id_TiposProyectos, "id_TiposProyectos", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("id_TiposProyectos", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.id_TiposProyectos, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.TiposProyectosViewModel, "Tipo Proyecto", htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    @Html.DropDownListFor(m => m.IdTipoProyecto, Model.TiposProyectosList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(model => model.TiposProyectosViewModel, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.Hub_NoHub, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Hub_NoHub, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Hub_NoHub, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.HubNoHub, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.HubNoHub, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HubNoHub, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                @Html.LabelFor(model => model.id_vision, "id_vision", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("id_vision", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.id_vision, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.VisionViewModel, "Vision", htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    @Html.DropDownListFor(m => m.IdVision, Model.VisionList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(model => model.VisionViewModel, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                <div class="col-md-offset-10 col-md-5">
+                    <input type="submit" value="Crear" class="btn btn-primary" id="approve-btn" />
                 </div>
             </div>
         </div>
     }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
-</body>
-</html>
+</div>
+
+
+
+<script type="text/javascript">
+
+    $(function () { // will trigger when the document is ready
+        $('.datepicker').datepicker(); //Initialise any date pickers
+    });
+
+    $(function () {
+        $('#approve-btn').click(function () {
+            $('#modal-container').modal('hide');
+        });
+    });
+
+</script>
