--- a/Scoring_MGDP/Views/DefMetricas/Delete.cshtml
+++ b/Scoring_MGDP/Views/DefMetricas/Delete.cshtml
@@ -1,144 +1,147 @@
-﻿@model Scoring_MGDPData.DefMetricas
+﻿@model Scoring_MGDP.ViewModel.DefMetricasViewModel
 
-@{
-    Layout = null;
-}
+<div class="modal-content">
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-    <h3>Are you sure you want to delete this?</h3>
+    <h4 align="center">¿Está seguro de eliminar esta definición de métrica?</h4>
     <div>
-        <h4>DefMetricas</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.FechaDesde)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.FechaDesde)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.FechaHasta)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.FechaHasta)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Clave)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Clave)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Ratio)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Ratio)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.PesoPonderado)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.PesoPonderado)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Peso)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Peso)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.ObjCritico)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.ObjCritico)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.ObjMinimo)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.ObjMinimo)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.ObjExcelencia)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.ObjExcelencia)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.Hub_NoHub)
+                @Html.DisplayNameFor(model => model.HubNoHub)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.Hub_NoHub)
+                @Html.DisplayFor(model => model.HubNoHub)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.Metricas.SiglaMetrica)
+                @Html.DisplayNameFor(model => model.MetricasViewModel.Descripcion)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.Metricas.SiglaMetrica)
+                @Html.DisplayFor(model => model.MetricasViewModel.Descripcion)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.Proveedores.NombreProv)
+                @Html.DisplayNameFor(model => model.ProveedorViewModel.NombreProveedor)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.Proveedores.NombreProv)
+                @Html.DisplayFor(model => model.ProveedorViewModel.NombreProveedor)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.TiposProyectos.DescTipoProyecto)
+                @Html.DisplayNameFor(model => model.TiposProyectosViewModel.Descripcion)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.TiposProyectos.DescTipoProyecto)
+                @Html.DisplayFor(model => model.TiposProyectosViewModel.Descripcion)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.Vision.DescripcionVision)
+                @Html.DisplayNameFor(model => model.VisionViewModel.Descripcion)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.Vision.DescripcionVision)
+                @Html.DisplayFor(model => model.VisionViewModel.Descripcion)
             </dd>
-    
+
         </dl>
-    
-        @using (Html.BeginForm()) {
+
+        @using (Html.BeginForm())
+        {
             @Html.AntiForgeryToken()
-    
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+
+            <div class="form-group">
+                <div class="col-md-offset-10 col-md-5">
+                    <input type="submit" value="Borrar" class="btn btn-primary" id="approve-btn" />
+                    <br />
+                    <br />
+                </div>
             </div>
+            <br />
         }
     </div>
-</body>
-</html>
+    <br />
+    <br />
+</div>
+
+<script type="text/javascript">
+        $(function () {
+            $('#approve-btn').click(function () {
+                $('#modal-container').modal('hide');
+            });
+        });
+</script>
