--- a/Scoring_MGDP/Views/DefMetricas/Details.cshtml
+++ b/Scoring_MGDP/Views/DefMetricas/Details.cshtml
@@ -1,138 +1,137 @@
-﻿@model Scoring_MGDPData.DefMetricas
+﻿@model Scoring_MGDP.ViewModel.DefMetricasViewModel
 
-@{
-    Layout = null;
-}
+<div class="modal-content">
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
     <div>
-        <h4>DefMetricas</h4>
+        <h4 align="center">Detalles de Métrica</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.FechaDesde)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.FechaDesde)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.FechaHasta)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.FechaHasta)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Clave)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Clave)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Ratio)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Ratio)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.PesoPonderado)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.PesoPonderado)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.Peso)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.Peso)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.ObjCritico)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.ObjCritico)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.ObjMinimo)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.ObjMinimo)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.ObjExcelencia)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.ObjExcelencia)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.Hub_NoHub)
+                @Html.DisplayNameFor(model => model.HubNoHub)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.Hub_NoHub)
+                @Html.DisplayFor(model => model.HubNoHub)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.Metricas.SiglaMetrica)
+                @Html.DisplayNameFor(model => model.MetricasViewModel.Descripcion)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.Metricas.SiglaMetrica)
+                @Html.DisplayFor(model => model.MetricasViewModel.Descripcion)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.Proveedores.NombreProv)
+                @Html.DisplayNameFor(model => model.ProveedorViewModel.NombreProveedor)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.Proveedores.NombreProv)
+                @Html.DisplayFor(model => model.ProveedorViewModel.NombreProveedor)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.TiposProyectos.DescTipoProyecto)
+                @Html.DisplayNameFor(model => model.TiposProyectosViewModel.Descripcion)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.TiposProyectos.DescTipoProyecto)
+                @Html.DisplayFor(model => model.TiposProyectosViewModel.Descripcion)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.Vision.DescripcionVision)
+                @Html.DisplayNameFor(model => model.VisionViewModel.Descripcion)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.Vision.DescripcionVision)
+                @Html.DisplayFor(model => model.VisionViewModel.Descripcion)
             </dd>
-    
+
         </dl>
     </div>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.id_DefMetricas }) |
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Edit", "Edit", new { id = Model.IdDefMetrica })
+        @Html.ActionLink("Editar", "Edit", new { id = Model.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })    
     </p>
-</body>
-</html>
+
+</div>
+
+
+<script type="text/javascript">
+    $(function () {
+        $('#approve-btn').click(function () {
+            $('#modal-container').modal('hide');
+        });
+    });
+</script>
