--- a/Scoring_MGDP/Views/DefMetricas/Index.cshtml
+++ b/Scoring_MGDP/Views/DefMetricas/Index.cshtml
@@ -11,9 +11,9 @@
     <br />
     <br />
 
-    <h2 class="azul sombraTexto textoCentro">Contratos de proveedores</h2>
+    <h2 class="azul sombraTexto textoCentro">Definición de Métricas</h2>
     <p>
-        @*@Html.ActionLink("Nuevo Contrato", "Create","ContratoProv", null, new { @class = "modal-link btn btn-primary" })*@
+        @*@Html.ActionLink("Nueva definición", "Create", "DefMetricas", null, new { @class = "modal-link btn btn-primary" })*@
         @Html.ActionLink("Nueva definición", "Create", "DefMetricas", new { proveedorId = ViewBag.ProveedorId }, new { @class = "modal-link btn btn-primary btn-sm" })
     </p>
 
@@ -22,8 +22,8 @@
 
 
         <div class="visible-md visible-lg col-md-12">
-            <div class="input-group col-md-10"> 
-                <span class="input-group-btn col-md-10">
+            <div class="input-group col-md-12"> 
+                <span class="input-group-btn col-md-12">
                     @Html.DropDownList("proveedorId", ViewBag.ProveedoresList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
                     @Html.DropDownList("metricaId", ViewBag.MetricasList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
                     <button class="btn btn-secondary btn-md" type="submit"><i class="glyphicon glyphicon-search"></i></button>
@@ -68,7 +68,7 @@
                     ¿HUB?
                 </th>
                 <th>
-                    Sigla Metrica
+                    Metrica
                 </th>
                 <th>
                     Proveedor
@@ -79,7 +79,9 @@
                 <th>
                     Visión
                 </th>
-                <th></th>
+                <th>
+                    Acciones
+                </th>
             </tr>
 
             @foreach (var item in Model)
@@ -116,7 +118,7 @@
                         @Html.DisplayFor(modelItem => item.HubNoHub)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.MetricasViewModel.Sigla)
+                        @Html.DisplayFor(modelItem => item.MetricasViewModel.Descripcion)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.ProveedorViewModel.NombreProveedor)
@@ -125,12 +127,12 @@
                         @Html.DisplayFor(modelItem => item.TiposProyectosViewModel.Descripcion)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.IdVision)
+                        @Html.DisplayFor(modelItem => item.VisionViewModel.Descripcion)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.IdDefMetrica }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.IdDefMetrica }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.IdDefMetrica })
+                        @Html.ActionLink("Detalles", "Details", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
+                        @Html.ActionLink("Editar", "Edit", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
                     </td>
                 </tr>
             }
