--- a/Scoring_MGDP/Views/MedicionesMetricas/Edit.cshtml
+++ b/Scoring_MGDP/Views/MedicionesMetricas/Edit.cshtml
@@ -7,7 +7,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4 align="center">Nueva Medición</h4>
+            <h4 align="center">Editar Medición</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
@@ -68,7 +68,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-10 col-md-5">
-                    <input type="submit" value="Crear" class="btn btn-primary" id="approve-btn" />
+                    <input type="submit" value="Guardar" class="btn btn-primary" id="approve-btn" />
                 </div>
             </div>
         </div>
