--- a/Scoring_MGDP/Views/Metricas/Delete.cshtml
+++ b/Scoring_MGDP/Views/Metricas/Delete.cshtml
@@ -1,64 +1,64 @@
-﻿@model Scoring_MGDPData.Metricas
+﻿@model Scoring_MGDP.ViewModel.MetricasViewModel
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-    <h3>Are you sure you want to delete this?</h3>
+<div class="modal-content">
+    <h4 align="center">¿Está seguro de eliminar esta métrica?</h4>
     <div>
-        <h4>Metricas</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.SiglaMetrica)
+                @Html.DisplayNameFor(model => model.Sigla)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.SiglaMetrica)
+                @Html.DisplayFor(model => model.Sigla)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.DescripcionMet)
+                @Html.DisplayNameFor(model => model.Descripcion)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.DescripcionMet)
+                @Html.DisplayFor(model => model.Descripcion)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.TiposMetricas.DescripcionTipMet)
+                @Html.DisplayNameFor(model => model.TiposMetricasViewModel.TipoMetrica)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.TiposMetricas.DescripcionTipMet)
+                @Html.DisplayFor(model => model.TiposMetricasViewModel.TipoMetrica)
             </dd>
-    
+
             <dt>
-                @Html.DisplayNameFor(model => model.UnidadeDeMedidas.UM)
+                @Html.DisplayNameFor(model => model.UnidadesMedidasViewModel.UnidadMedida)
             </dt>
-    
+
             <dd>
-                @Html.DisplayFor(model => model.UnidadeDeMedidas.UM)
+                @Html.DisplayFor(model => model.UnidadesMedidasViewModel.UnidadMedida)
             </dd>
-    
+
         </dl>
-    
-        @using (Html.BeginForm()) {
+
+        @using (Html.BeginForm())
+        {
             @Html.AntiForgeryToken()
-    
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+
+            <div class="form-group">
+                <div class="col-md-offset-10 col-md-5">
+                    <input type="submit" value="Borrar" class="btn btn-primary" id="approve-btn" />
+                    <br />
+                    <br />
+                </div>
             </div>
+            <br />
         }
     </div>
-</body>
-</html>
+</div>
+
+<script type="text/javascript">
+    $(function () {
+        $('#approve-btn').click(function () {
+            $('#modal-container').modal('hide');
+        });
+    });
+</script>
