--- a/Scoring_MGDP/Views/DefMetricas/Index.cshtml
+++ b/Scoring_MGDP/Views/DefMetricas/Index.cshtml
@@ -133,6 +133,7 @@
                         @Html.ActionLink("Detalles", "Details", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
                         @Html.ActionLink("Editar", "Edit", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
                         @Html.ActionLink("Eliminar", "Delete", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
+                        @Html.ActionLink("Cargar", "Cargar", new { id = item.IdDefMetrica }, new { @class = "btn btn-primary btn-sm" })
                     </td>
                 </tr>
             }
