--- a/Scoring_MGDP/Views/DefMetricas/Edit.cshtml
+++ b/Scoring_MGDP/Views/DefMetricas/Edit.cshtml
@@ -28,21 +28,27 @@
                 </div>
             </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.FechaDesde, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-7">
-                        @Html.EditorFor(model => model.FechaDesde, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group">
+                @Html.LabelFor(model => model.FechaDesde, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    <div class="input-group">
+                        @Html.TextBoxFor(model => model.FechaDesde, new { @class = "form-control datepicker", @PlaceHolder = "Seleccione fecha desde" })
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
                         @Html.ValidationMessageFor(model => model.FechaDesde, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.FechaHasta, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-7">
-                        @Html.EditorFor(model => model.FechaHasta, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group">
+                @Html.LabelFor(model => model.FechaHasta, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    <div class="input-group">
+                        @Html.TextBoxFor(model => model.FechaHasta, new { @class = "form-control datepicker", @PlaceHolder = "Seleccione fecha hasta" })
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
                         @Html.ValidationMessageFor(model => model.FechaHasta, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label col-md-3" })
@@ -133,10 +139,19 @@
     }
 </div>
 
-        <script type="text/javascript">
+<script type="text/javascript">
+
+    $('.datepicker').datepicker({
+        format: "dd/mm/yyyy",
+        language: "es",
+        orientation: "bottom auto",
+        autoclose: true,
+    });
+
+
     $(function () {
         $('#approve-btn').click(function () {
             $('#modal-container').modal('hide');
         });
     });
-        </script>
+</script>
