--- a/Scoring_MGDP/Views/DefMetricas/Index.cshtml
+++ b/Scoring_MGDP/Views/DefMetricas/Index.cshtml
@@ -43,7 +43,7 @@
                 <th>
                     Fecha hasta
                 </th>
-                <th>
+                @*<th>
                     Clave
                 </th>
                 <th>
@@ -54,7 +54,7 @@
                 </th>
                 <th>
                     Peso
-                </th>
+                </th>*@
                 <th>
                     Objtivo Crítico
                 </th>
@@ -67,12 +67,12 @@
                 <th>
                     ¿HUB?
                 </th>
-                <th>
+                @*<th>
                     Metrica
                 </th>
                 <th>
                     Proveedor
-                </th>
+                </th>*@
                 <th>
                     Desc. Proyecto
                 </th>
@@ -93,7 +93,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.FechaHasta)
                     </td>
-                    <td>
+                    @*<td>
                         @Html.DisplayFor(modelItem => item.Clave)
                     </td>
                     <td>
@@ -104,7 +104,7 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Peso)
-                    </td>
+                    </td>*@
                     <td>
                         @Html.DisplayFor(modelItem => item.ObjCritico)
                     </td>
@@ -117,23 +117,23 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.HubNoHub)
                     </td>
-                    <td>
+                    @*<td>
                         @Html.DisplayFor(modelItem => item.MetricasViewModel.Descripcion)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.ProveedorViewModel.NombreProveedor)
-                    </td>
+                    </td>*@
                     <td>
                         @Html.DisplayFor(modelItem => item.TiposProyectosViewModel.Descripcion)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.VisionViewModel.Descripcion)
                     </td>
-                    <td>
-                        @Html.ActionLink("Detalles", "Details", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
-                        @Html.ActionLink("Editar", "Edit", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
-                        @Html.ActionLink("Eliminar", "Delete", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-sm" })
-                        @Html.ActionLink("Cargar", "Cargar", new { id = item.IdDefMetrica }, new { @class = "btn btn-primary btn-sm" })
+                    <td class="text-center">
+                        @Html.ActionLink("Detalles", "Details", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-xs" })
+                        @Html.ActionLink("Editar", "Edit", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-xs" })
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.IdDefMetrica }, new { @class = "modal-link btn btn-primary btn-xs" })
+                        @Html.ActionLink("Cargar", "Cargar", new { id = item.IdDefMetrica }, new { @class = "btn btn-primary btn-xs" })
                     </td>
                 </tr>
             }
