--- a/Scoring_MGDP/Views/MedicionesMetricas/Create.cshtml
+++ b/Scoring_MGDP/Views/MedicionesMetricas/Create.cshtml
@@ -10,21 +10,32 @@
             <h4 align="center">Nueva Medición</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.FechaMedicion, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
                     @Html.EditorFor(model => model.FechaMedicion, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.FechaMedicion, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
+                @Html.LabelFor(model => model.FechaMedicion, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    <div class="input-group">
+                        @Html.TextBoxFor(model => model.FechaMedicion, new { @class = "form-control datepicker", @PlaceHolder = "Seleccione mes de medición" })
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+                        @Html.ValidationMessageFor(model => model.FechaMedicion, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.IdDefMetrica, "Def Metrica", htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
                     @Html.DropDownList("id_DefMetricas", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.IdDefMetrica, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.TiposProyectosViewModel, "Tipo Proyecto", htmlAttributes: new { @class = "control-label col-md-3" })
@@ -77,6 +88,17 @@
 </div>
 
 <script type="text/javascript">
+
+    $('.datepicker').datepicker({
+        format: "dd/mm/yyyy",
+        startView: 1,
+        minViewMode: 1,
+        todayBtn: false,
+        language: "es",
+        orientation: "bottom auto",
+        todayHighlight: false
+    });
+
     $(function () {
         $('#approve-btn').click(function () {
             $('#modal-container').modal('hide');
