--- a/Scoring_MGDP/Views/MedicionesMetricas/Create.cshtml
+++ b/Scoring_MGDP/Views/MedicionesMetricas/Create.cshtml
@@ -29,13 +29,13 @@
                 </div>
             </div>
 
-            @*<div class="form-group">
-                @Html.LabelFor(model => model.IdDefMetrica, "Def Metrica", htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.IdDefMetrica, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
-                    @Html.DropDownList("id_DefMetricas", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.IdDefMetrica, "", new { @class = "text-danger" })
                 </div>
-            </div>*@
+            </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.TiposProyectosViewModel, "Tipo Proyecto", htmlAttributes: new { @class = "control-label col-md-3" })
