--- a/Scoring_MGDP/Views/Shared/_Layout.cshtml
+++ b/Scoring_MGDP/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action("Contact", "Home")">
+                                        <a href="@Url.Action("TableroMGDP", "Tableros")">
                                             MGDP
                                         </a>
                                     </li>
@@ -152,14 +152,14 @@
                                     </li>
                                     <li>
                                         <a href="@Url.Action("Index", "DefMetricas")">
-                                            Definición de métricas
+                                            Definición y carga de métricas
                                         </a>
                                     </li>
-                                    <li>
+                                    @*<li>
                                         <a href="@Url.Action("Index", "MedicionesMetricas")">
                                             Carga de métricas
                                         </a>
-                                    </li>                                    
+                                    </li>*@                                    
                                 </ul>
                             </li>
                             <li class="dropdown">
