--- a/Scoring_MGDP/Views/MedicionesMetricas/Create.cshtml
+++ b/Scoring_MGDP/Views/MedicionesMetricas/Create.cshtml
@@ -19,6 +19,14 @@
             </div>*@
 
             <div class="form-group">
+                @Html.LabelFor(model => model.IdDefMetrica, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                    @Html.ValidationMessageFor(model => model.IdDefMetrica, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            
+            <div class="form-group">
                 @Html.LabelFor(model => model.FechaMedicion, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
                     <div class="input-group">
@@ -26,14 +34,6 @@
                         <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
                         @Html.ValidationMessageFor(model => model.FechaMedicion, "", new { @class = "text-danger" })
                     </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.IdDefMetrica, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-7">
-                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.IdDefMetrica, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Calculado, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
-                    @Html.EditorFor(model => model.Calculado, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownListFor(m => m.Calculado, Model.CalculadoList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                     @Html.ValidationMessageFor(model => model.Calculado, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -72,7 +72,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.RatioSiNo, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
-                    @Html.EditorFor(model => model.RatioSiNo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownListFor(m => m.RatioSiNo, Model.RatioSiNoList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                     @Html.ValidationMessageFor(model => model.RatioSiNo, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -91,12 +91,12 @@
 
     $('.datepicker').datepicker({
         format: "dd/mm/yyyy",
-        startView: 1,
-        minViewMode: 1,
-        todayBtn: false,
+        //startView: 1,
+        //minViewMode: 1,
         language: "es",
         orientation: "bottom auto",
-        todayHighlight: false
+        todayHighlight: true,
+        autoclose: true
     });
 
     $(function () {
