--- a/Scoring_MGDP/Views/MedicionesMetricas/Edit.cshtml
+++ b/Scoring_MGDP/Views/MedicionesMetricas/Edit.cshtml
@@ -10,19 +10,20 @@
             <h4 align="center">Editar Medición</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            
+            <div class="form-group">
+                @Html.LabelFor(model => model.IdDefMetrica, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                    @Html.ValidationMessageFor(model => model.IdDefMetrica, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            
             <div class="form-group">
                 @Html.LabelFor(model => model.FechaMedicion, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
                     @Html.EditorFor(model => model.FechaMedicion, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.FechaMedicion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.IdDefMetrica, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-7">
-                    @Html.EditorFor(model => model.IdDefMetrica, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.IdDefMetrica, "", new { @class = "text-danger" })
                 </div>
             </div>
 
