--- a/Scoring_MGDP/Views/Proveedores/Create.cshtml
+++ b/Scoring_MGDP/Views/Proveedores/Create.cshtml
@@ -54,7 +54,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Gestion, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-7">
-                @Html.EditorFor(model => model.Gestion, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                @Html.DropDownListFor(m => m.Gestion, Model.TipoGestionList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(model => model.Gestion, "", new { @class = "text-danger" })
             </div>
         </div>
