Final para presentación tesis

--- a/Scoring_MGDP/Views/Home/Index.cshtml
+++ b/Scoring_MGDP/Views/Home/Index.cshtml
@@ -9,19 +9,14 @@
     <br />
     <br />
 </div>
-    <div class="col-sm-12 text-center" style="background: white;">
+    @*<div class="col-sm-12 text-center" style="background: white;">
         <h1 class="azul">Web de scoring y MGD</h1>
-    </div>
+    </div>*@
 
     <div class="col-md-12 bg-default" style="background: white;">
         <p style="text-align:center">
-            @*<a type="button" class="btn btn-primary btn-lg " href="../TableroCalidad">Tablero<br />Scoring Prueba</a>&nbsp;&nbsp;&nbsp;
-            <a type="button" class="btn btn-info btn-lg" href="../">Tablero<br />Modelo de Gestión de Proveedores</a>&nbsp;&nbsp;&nbsp;
-            <a type="button" class="btn btn-warning btn-lg" href="../Proveedores">Carga<br />Métricas</a>&nbsp;&nbsp;&nbsp;
-            <a type="button" class="btn btn-warning btn-lg" href="../Proveedores">Configuración<br />Entidades</a>*@
-            <h2>Ver si poner accesos rápidos o no</h2>
-        @*<p>texto de ejemplo</p>
-        <p>@Html.ActionLink("Proveedores", "Index", "Proveedores")</p>
-        <p> @Html.ActionLink("Editar", "Edit", new { id = 1 }, new { @class = "btn btn-primary btn-xs" }) |</p>*@
+            <img src="@Url.Content("~/")assets/img/portadaWeb.png" class="img-responsive" width="1024" height="768">
+            @*<img src="cinqueterre.jpg" class="img-responsive" alt="Cinque Terre" width="304" height="236">*@ 
+        <p/>
     </div>
 
