--- a/Scoring_MGDP/Views/MedicionesMetricas/Index.cshtml
+++ b/Scoring_MGDP/Views/MedicionesMetricas/Index.cshtml
@@ -13,28 +13,31 @@
 
     <h2 class="azul sombraTexto textoCentro">Medición de Métricas</h2>
     <br />
-    @Html.ActionLink("Volver a la lista", "Index", "DefMetricas", new { proveedorId = Model.ProveedorId, metricaId = Model.MetricaId }, new { @class = "modal-link btn btn-primary" })
+    <div>
+        <div style="float:left;">
+            @Html.ActionLink("Nueva medición", "Create", "MedicionesMetricas", new { defMetricaId = Model.IdDefMetricas }, new { @class = "modal-link btn btn-primary" })
+        </div>
+        <div style="float:right">
+            @Html.ActionLink("Volver a métricas", "Index", "DefMetricas", new { proveedorId = Model.ProveedorId, metricaId = Model.MetricaId }, new { @class = "btn btn-success", title = "Volver a la definición de métricas" })
+        </div>
+    </div>
     <br />
     <br />
-    <p>
-        @Html.ActionLink("Nueva medición", "Create", "MedicionesMetricas", new { defMetricaId = Model.IdDefMetricas }, new { @class = "modal-link btn btn-primary" })
-        @*@Html.ActionLink("Nueva medición", "Create", "MedicionesMetricas", new { proveedorId = ViewBag.ProveedorId }, new { @class = "modal-link btn btn-primary btn-sm" })*@
-    </p>
-
-    @using (Html.BeginForm("Index", "Medicion", FormMethod.Get, new { @class = "form-inline" }))
-    {
+    <br />
+        @using (Html.BeginForm("Index", "Medicion", FormMethod.Get, new { @class = "form-inline" }))
+        {
 
 
-        @*<div class="visible-md visible-lg col-md-12">
-            <div class="input-group col-md-6">
-                @Html.DropDownList("search", ViewBag.ProveedoresList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
-                <span class="input-group-btn">
-                    <button class="btn btn-secondary btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                </span>
-            </div>
-        </div>*@
+            @*<div class="visible-md visible-lg col-md-12">
+                    <div class="input-group col-md-6">
+                        @Html.DropDownList("search", ViewBag.ProveedoresList as SelectList, "Seleccionar", htmlAttributes: new { @class = "form-control" })
+                        <span class="input-group-btn">
+                            <button class="btn btn-secondary btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </span>
+                    </div>
+                </div>*@
 
-    }
+        }
 
     <div class="visible-md visible-lg col-md-12">
         <table class="table table-striped table-sm">
@@ -55,8 +58,8 @@
                     ¿Cumple Ratio?
                 </th>
                 @*<th>
-                    Definición métrica
-                </th>*@
+                        Definición métrica
+                    </th>*@
                 <th>
                     Tipo Proyecto
                 </th>
@@ -84,8 +87,8 @@
                         @Html.DisplayFor(modelItem => item.RatioSN)
                     </td>
                     @*<td>
-                        @Html.DisplayFor(modelItem => item.DefMetricasViewModel.IdDefMetrica)
-                    </td>*@
+                            @Html.DisplayFor(modelItem => item.DefMetricasViewModel.IdDefMetrica)
+                        </td>*@
                     <td>
                         @Html.DisplayFor(modelItem => item.TiposProyectosViewModel.Descripcion)
                     </td>
@@ -100,9 +103,12 @@
         <br />
         Página @(Model.PagedMedicionesMetricas.PageCount < Model.PagedMedicionesMetricas.PageNumber ? 0 : Model.PagedMedicionesMetricas.PageNumber) de @Model.PagedMedicionesMetricas.PageCount
 
-        @Html.PagedListPager(Model.PagedMedicionesMetricas, page => Url.Action("Index",
-        new { page, sortOrder = ViewBag.CurrentSort, proveedorId = Model.ProveedorId, metricaId = Model.MetricaId, idDefMetricas = Model.IdDefMetricas }))
-        <br />
-        @Html.ActionLink("Volver a la lista", "Index", "DefMetricas", new { proveedorId = Model.ProveedorId, metricaId = Model.MetricaId }, new { @class = "modal-link btn btn-primary" })  
-    </div>
-</div>
+        <div>
+            <div style="float:left;">
+                @Html.PagedListPager(Model.PagedMedicionesMetricas, page => Url.Action("Index",
+            new { page, sortOrder = ViewBag.CurrentSort, proveedorId = Model.ProveedorId, metricaId = Model.MetricaId, idDefMetricas = Model.IdDefMetricas }))
+            </div>
+            <div style="float:right">
+                @Html.ActionLink("Volver a métricas", "Index", "DefMetricas", new { proveedorId = Model.ProveedorId, metricaId = Model.MetricaId }, new { @class = "btn btn-success" })
+            </div>
+        </div>
