--- a/Scoring_MGDP/Views/Shared/_Layout.cshtml
+++ b/Scoring_MGDP/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
     <link rel="stylesheet" href="@Url.Content("~/")assets/css/animate.css">
     <link rel="stylesheet" href="@Url.Content("~/")assets/css/custom-center.css">
     <link rel="stylesheet" href="@Url.Content("~/")assets/dist/css/jquery.fileupload.css" />
+    <link rel="stylesheet" href="@Url.Content("~/")assets/css/bootstrap-datepicker.css" />
+    <link rel="stylesheet" href="@Url.Content("~/")assets/css/bootstrap-datepicker3.css" />
+
     
     @*<!-- Piwik se puede borrar o generar un nuevo ID. Consultar con Gustavo Pavia-->
     <script type="text/javascript">
@@ -319,6 +322,14 @@
     <script src="@Url.Content("~/")assets/js/Inicio.js?v=482100005"></script>
     <script src="@Url.Content("~/")assets/js/ajax.helpers.js"></script>
     <script src="@Url.Content("~/")assets/js/tableau-2.min.js"></script>
+    <script src="@Url.Content("~/")assets/js/bootstrap-datepicker.js"></script>
+    <script src="@Url.Content("~/")assets/js/bootstrap-datepicker.min.js"></script>
+    <script src="@Url.Content("~/")assets/locale/bootstrap-datepicker.es.min.js"></script>
+
+
+    bootstrap-datepicker.js
+    bootstrap-datepicker.min.js
+    bootstrap-datepicker.es.min.js
     
     @RenderSection("scripts", required: false)
     <!-- Modal -->
